Added other pages

--- a/fishingreports/blog2.html
+++ b/fishingreports/blog2.html
@@ -47,39 +47,32 @@
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
-	<h1 style="text-align: left"> Orlando Florida Fishing Charters</h1>
-	<h3 style="text-align: left">POSTED ON JANUARY 29, 2017 BY FLATADDICTED</h3>
+	<h1 style="text-align: left">Incredible Tailing Redfish Action!</h1>
+	<h3 style="text-align: left">POSTED ON August 18, 2016 BY FLATADDICTED</h3>
 	<hr><br>
 
-	<center><img class="photo" src="../img/blog0-0.jpg"></center>
+	<center><img class="photo" src="../img/blog2.jpg"></center>
 	
-	<p><b>January 29th 2017 - Orlando Fishing Charters</b> and fishing trips
-	 near the Mosquito Lagoon have been targeting huge black drum this past week.
-	  This time of the year it’s extremely productive for the Black Drum on the flats.
-	   Visitors to Orlando Florida are only a short drive to the world famous Mosquito
-	    Lagoon where the best Black Drum fishing can be found. The Drum are holding in
-		 huge schools along the 3 foot depth that we can sight cast to with Live Shrimp
-		  and Blue Crabs. The best gear for the job (7 foot Med. Spinning Rod) on a 3000
-		   to 4000 reel.</p>
-	<p>Fishing in the Orlando area during the winter months also hosts species like Red Fish
-		 and Sea Trout. The Red fishing this past month has been average with most fish in
-		  the 4 to 8 pound range and Sea Trout in the 2 to 4 pound range. Redfish are eating
-		   live shrimp and gold spoons while the Sea Trout like the top water and swim baits.
-		    Redfish like the shallower water... 1 to 2 feet and Sea Trout in the 2 to 3 foot 
-			range.</p>
-	<p>February is just getting started and it’s looking like a very good month for flats fishing. 
-		The water is slowly getting cleaner this year unlike last year when the unnaturally warmer 
-		temps set in. With the cooler temps we are now getting it’s producing some epic sight casting 
-		conditions. Book a trips while the new prices last before the Spring rates kick in. You can pre 
-		pay now to lock in the Winter Rate for a Spring or even a Summer fishing trip.</p>
+	<p>Huge Mosquito Lagoon Red Fish are here in Florida once again and that means it’s time for the fall Mullet run. The Mullet run triggers a feeding frenzy for big bull redfish in the north end of the Indian River and parts of the Mosquito Lagoon. This is the last time the red fish will have an abundance of free food on the flats before the mullet move away, they sense this which triggers the feed. It’s not uncommon to get into schools of five to six hundred red fish that weigh between 20 and 40 pounds.
+    <br><br>
+    The Mosquito Lagoon and Indian River are well-known for this phenomenon worldwide. Anglers have been targeting them for well over 30 years attempting to best their personal records with spinning or fly fishing gear. When it comes to fishing with conventional or spinning gear the red fish will take topwater plugs and live bait fish on the surface. Fly fishermen like to use top water flies like poppers or simulated plugs as well as bait fish style flies like seaducers and clousers.
+    <br><br>
+    From now until the end of September and even sometimes the middle of October the spawning redfish will be the main target. Over the years this has by far become my favorite time to be a fishing guide because it just simply cannot be outdone. There is absolutely nothing more exciting than watching a 30-pound redfish explode on the surface in a school of 600 fish all fighting for the same lure or bait fish… even after 12 years of guiding I still get excited seeing it.
+    <br><br>
+    Just remember we’re only 45 to 50 minutes away from all the major theme parks in tge Orlando area so if this kind of experience is something you’re looking for… call me today and let’s go fishing!
+    <br><br>
+    Captain Tom Carver
+    <br><br>
+    <u><a href="tel:1-407-432-5138">1-407-432-5138</a></u>
+    <br><br>
+    <u><a href="https://flataddicted.com">https://flataddicted.com</a></u>
+    <br><br>
+    <u><a href="mailto:flataddicted@gmail.com">flataddicted@gmail.com</a></p></a>
 	
-	<p>I hope your new year is going well... Let's Go Fishing!</p>
-	<center><img class="photo" src="../img/blog0-1.jpg">
-		<img class="photo" src="../img/blog0-2.jpg"></center>
-</div>
 
+</div>
 <!-- Contact Form -->
-<div style="padding-top: 50px; width:100%;  background-color: #f7faff;">
+<div style="padding-top: 50px; background-color: #f7faff;">
 	<h4 style="text-align: center;">I'D LOVE TO HEAR FROM YOU</h4>
 	<h1 style="letter-spacing: 3px">CONTACT ME ANY TIME</h1>
 	<br>
