--- a/fishingreports/blog3.html
+++ b/fishingreports/blog3.html
@@ -47,39 +47,26 @@
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
-	<h1 style="text-align: left"> Orlando Florida Fishing Charters</h1>
-	<h3 style="text-align: left">POSTED ON JANUARY 29, 2017 BY FLATADDICTED</h3>
+	<h1 style="text-align: left">Orlando Fishing Trip</h1>
+	<h3 style="text-align: left">POSTED ON July 6, 2016 BY FLATADDICTED</h3>
 	<hr><br>
 
-	<center><img class="photo" src="../img/blog0-0.jpg"></center>
-	
-	<p><b>January 29th 2017 - Orlando Fishing Charters</b> and fishing trips
-	 near the Mosquito Lagoon have been targeting huge black drum this past week.
-	  This time of the year it’s extremely productive for the Black Drum on the flats.
-	   Visitors to Orlando Florida are only a short drive to the world famous Mosquito
-	    Lagoon where the best Black Drum fishing can be found. The Drum are holding in
-		 huge schools along the 3 foot depth that we can sight cast to with Live Shrimp
-		  and Blue Crabs. The best gear for the job (7 foot Med. Spinning Rod) on a 3000
-		   to 4000 reel.</p>
-	<p>Fishing in the Orlando area during the winter months also hosts species like Red Fish
-		 and Sea Trout. The Red fishing this past month has been average with most fish in
-		  the 4 to 8 pound range and Sea Trout in the 2 to 4 pound range. Redfish are eating
-		   live shrimp and gold spoons while the Sea Trout like the top water and swim baits.
-		    Redfish like the shallower water... 1 to 2 feet and Sea Trout in the 2 to 3 foot 
-			range.</p>
-	<p>February is just getting started and it’s looking like a very good month for flats fishing. 
-		The water is slowly getting cleaner this year unlike last year when the unnaturally warmer 
-		temps set in. With the cooler temps we are now getting it’s producing some epic sight casting 
-		conditions. Book a trips while the new prices last before the Spring rates kick in. You can pre 
-		pay now to lock in the Winter Rate for a Spring or even a Summer fishing trip.</p>
-	
-	<p>I hope your new year is going well... Let's Go Fishing!</p>
-	<center><img class="photo" src="../img/blog0-1.jpg">
-		<img class="photo" src="../img/blog0-2.jpg"></center>
-</div>
+	<p>Orlando fishing trips and guided fishing tours near orlando have been on a rise over the past few years. Vacationing families from around the globe have discovered phenomenal fishing just a short 45 minutes from the <u><a href="https://disneyworld.disney.go.com/resorts">Disney World Resorts</a></u>. When anglers are visiting Orlando and discover we have world class saltwater fishing this close to the theme parks they immediately call us to book a trip. The best inshore flats fishing occurs in the Mosquito Lagoon near the Kennedy Space center, Titusville FL.
+    </p>
 
+    <h3><u><b>Inshore Fishing Report</u></b></h3>
+
+    <p>Red fishing in the Mosquito Lagoon has been excellent as of lately. The shallow flats are producing smaller catches of Redfish from 2 to 8 pounds and Sea Trout in the 3 to 9 pound range. Out on the deeper flats and along the edges of sandbars huge Redfish in the 15 to 30 pound range show up mid morning and give us a shot just feet from the bow of boat. This year has been exceptionally hot weather and the bite has been best during the cooler parts of the day, like the first few hours of the morning between 6 am and 10 am.</p>
+	
+    <center><img class="photo" src="../img/blog3.jpg"></center>
+
+    <h3><u><b>Inshore Fishing Report</u></b></h3>
+    <p>The nearshore fishing outside of Port Canaveral and Cape Canaveral Florida has been producing Tarpon near the beach and along the Canaveral Bight. Bonita are schooled up in huge groups and hitting any thing from Fly to live bait. Triple tail are plentiful as well and most days the big ones are possible targets. Cape Canaveral is famous for those huge Triple Tail.</p>
+
+    <center><img class="photo" src="../img/blog3_1.jpg"></center>
+</div>
 <!-- Contact Form -->
-<div style="padding-top: 50px; width:100%;  background-color: #f7faff;">
+<div style="padding-top: 50px; background-color: #f7faff;">
 	<h4 style="text-align: center;">I'D LOVE TO HEAR FROM YOU</h4>
 	<h1 style="letter-spacing: 3px">CONTACT ME ANY TIME</h1>
 	<br>
