--- a/fishingreports/blog4.html
+++ b/fishingreports/blog4.html
@@ -47,39 +47,25 @@
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
-	<h1 style="text-align: left"> Orlando Florida Fishing Charters</h1>
-	<h3 style="text-align: left">POSTED ON JANUARY 29, 2017 BY FLATADDICTED</h3>
+	<h1 style="text-align: left">Orlando Fishing Trips</h1>
+	<h3 style="text-align: left">POSTED ON MAy 18, 2016 BY FLATADDICTED</h3>
 	<hr><br>
 
-	<center><img class="photo" src="../img/blog0-0.jpg"></center>
-	
-	<p><b>January 29th 2017 - Orlando Fishing Charters</b> and fishing trips
-	 near the Mosquito Lagoon have been targeting huge black drum this past week.
-	  This time of the year it’s extremely productive for the Black Drum on the flats.
-	   Visitors to Orlando Florida are only a short drive to the world famous Mosquito
-	    Lagoon where the best Black Drum fishing can be found. The Drum are holding in
-		 huge schools along the 3 foot depth that we can sight cast to with Live Shrimp
-		  and Blue Crabs. The best gear for the job (7 foot Med. Spinning Rod) on a 3000
-		   to 4000 reel.</p>
-	<p>Fishing in the Orlando area during the winter months also hosts species like Red Fish
-		 and Sea Trout. The Red fishing this past month has been average with most fish in
-		  the 4 to 8 pound range and Sea Trout in the 2 to 4 pound range. Redfish are eating
-		   live shrimp and gold spoons while the Sea Trout like the top water and swim baits.
-		    Redfish like the shallower water... 1 to 2 feet and Sea Trout in the 2 to 3 foot 
-			range.</p>
-	<p>February is just getting started and it’s looking like a very good month for flats fishing. 
-		The water is slowly getting cleaner this year unlike last year when the unnaturally warmer 
-		temps set in. With the cooler temps we are now getting it’s producing some epic sight casting 
-		conditions. Book a trips while the new prices last before the Spring rates kick in. You can pre 
-		pay now to lock in the Winter Rate for a Spring or even a Summer fishing trip.</p>
-	
-	<p>I hope your new year is going well... Let's Go Fishing!</p>
-	<center><img class="photo" src="../img/blog0-1.jpg">
-		<img class="photo" src="../img/blog0-2.jpg"></center>
+	<p>The past two weeks have been non-stop tailing redfish action in the mosquito Lagoon. There have been days when the sea trout bite has been pretty good but overall the redfish have been the most consistent.
+    <br><br>
+    The weather has been awesome, as calm conditions continue in the a.m. producing some incredible tailing redfish conditions. It doesn't take long to find the fish in this condition... it's like the fish are waving a flag telling you where to go. You could call it dumb dumb fishing...
+    <br><br>
+    The reds are averaging 5 to 7 pounds in the schools but fish from 10 to 15 pounds are singled out in deeper water feeding on bait fish. Sea trout in the 2 to 4 pound range are hung in around the shallow flats with an occasional 7 to 10 pounder near by. The bite for trout has slowed down from last week but the reds are heating up.
+    <br><br>
+    The near shore bites been good for sharks... and lots of them... some are small but many are huge with many varieties.
+    <br><br>
+    The Mahi-Mahi have been on fire offshore along with huge snapper and a few grouper. Most days the half day trips are producing but by far full days are best.
+    <br><br>
+    May is almost over and I have a few spots available but June is all ready booking so be sure to secure that date soon before it's gone.
+    </p>
 </div>
-
 <!-- Contact Form -->
-<div style="padding-top: 50px; width:100%;  background-color: #f7faff;">
+<div style="padding-top: 50px; background-color: #f7faff;">
 	<h4 style="text-align: center;">I'D LOVE TO HEAR FROM YOU</h4>
 	<h1 style="letter-spacing: 3px">CONTACT ME ANY TIME</h1>
 	<br>
