--- a/index.html
+++ b/index.html
@@ -459,16 +459,13 @@
 				<div class="blog">
 					<hr>
 					<td>
-						<img src="img/blog1.jpg" width="200px" height="150px;" style="padding: 20px" >
+						<a href="fishingreports/blog0.html"><img src="img/blog0.jpg" width="200px" height="150px;" style="padding: 20px" ></a>
 					</td>
 					
 					<td>
-						<h3>UNCATEGORIZED</h3>
-						<h1 style="text-align: left;">Incredible Tailing Redfish Action!</h1>
-						<p style="text-align: left;">Incredible Tailing Redfish Action! Winter
-							is that magical time of the year when Redfish
-							really turn on and start offering pure sight
-							casting opportunities. For the past 3 to …</p>
+						<h3>ORLANDO FISHING CHARTERS</h3>
+						<a href="fishingreports/blog0.html"><h1 style="text-align: left;">Orlando Florida Fishing Charters</h1></a>
+						<p style="text-align: left;">January 29th 2017 – Orlando Florida Fishing Charters and fishing trips near the Mosquito Lagoon have been targeting huge black drum this past week. This time of the year</p>
 						<br>
 					</td>
 				</div>
@@ -485,16 +482,13 @@
 		<tr>
 			<div class="blog">
 				<td>
-					<img src="img/blog2.jpg" width="200px" height="150px" style="padding: 20px">
+					<a href="fishingreports/blog1.html"><img src="img/blog1.jpg" width="200px" height="150px" style="padding: 20px"></a>
 				</td>
 
 				<td>
-					<h3>UNCATEGORIZED</h3>
-					<h1 style="text-align: left;">Huge Mosquito Lagoon Red Fish</h1>
-					<p style="text-align: left;"> Huge Mosquito Lagoon Red Fish
-						are here in Florida once again and that means it’s
-						time for the fall Mullet run. The Mullet run triggers
-						a feeding frenzy for big …</p>
+					<h3>ORLANDO FISHING CHARTERS</h3>
+					<a href="fishingreports/blog1.html"><h1 style="text-align: left;">Incredible Tailing Redfish Action!</h1></a>
+					<p style="text-align: left;">Incredible Tailing Redfish Action! Winter is that magical time of the year when Redfish really turn on and start offering pure sight casting opportunities. For the past 3 to...</p>
 					<br>
 				</td>
 				
@@ -512,16 +506,16 @@
 		<tr>
 			<div class="blog">
 				<td>
-					<img src="img/blog3.jpg" width="200px" height="150px;" style="padding: 20px" >
+					<a href="fishingreports/blog2.html"><img src="img/blog2.jpg" width="200px" height="150px;" style="padding: 20px" ></a>
 				</td>
 
 				<td>
-					<h3>UNCATEGORIZED</h3>
-					<h1 style="text-align: left;">Orlando Fishing Trip</h1>
-					<p style="text-align: left;">Orlando fishing trips and
-						guided fishing tours near orlando have been on a
-						rise over the past few years. Vacationing families
-						from around the globe have discovered phenomenal fishing just …</p>
+					<h3>ORLANDO FISHING CHARTERS</h3>
+					<a href="fishingreports/blog2.html"><h1 style="text-align: left;">Huge Mosquito Lagoon Red Fish</h1></a>
+					<p style="text-align: left;">Huge Mosquito Lagoon Red Fish
+						are here in Florida once again and that means it’s
+						time for the fall Mullet run. The Mullet run triggers
+						a feeding frenzy for big...</p>
 					<br>
 				</td>
 			</div>
