--- a/fishingreports/blog5.html
+++ b/fishingreports/blog5.html
@@ -47,39 +47,33 @@
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
-	<h1 style="text-align: left"> Orlando Florida Fishing Charters</h1>
-	<h3 style="text-align: left">POSTED ON JANUARY 29, 2017 BY FLATADDICTED</h3>
+	<h1 style="text-align: left">Orlando Fishing Trips</h1>
+	<h3 style="text-align: left">POSTED ON MAy 18, 2016 BY FLATADDICTED</h3>
 	<hr><br>
 
-	<center><img class="photo" src="../img/blog0-0.jpg"></center>
-	
-	<p><b>January 29th 2017 - Orlando Fishing Charters</b> and fishing trips
-	 near the Mosquito Lagoon have been targeting huge black drum this past week.
-	  This time of the year it’s extremely productive for the Black Drum on the flats.
-	   Visitors to Orlando Florida are only a short drive to the world famous Mosquito
-	    Lagoon where the best Black Drum fishing can be found. The Drum are holding in
-		 huge schools along the 3 foot depth that we can sight cast to with Live Shrimp
-		  and Blue Crabs. The best gear for the job (7 foot Med. Spinning Rod) on a 3000
-		   to 4000 reel.</p>
-	<p>Fishing in the Orlando area during the winter months also hosts species like Red Fish
-		 and Sea Trout. The Red fishing this past month has been average with most fish in
-		  the 4 to 8 pound range and Sea Trout in the 2 to 4 pound range. Redfish are eating
-		   live shrimp and gold spoons while the Sea Trout like the top water and swim baits.
-		    Redfish like the shallower water... 1 to 2 feet and Sea Trout in the 2 to 3 foot 
-			range.</p>
-	<p>February is just getting started and it’s looking like a very good month for flats fishing. 
-		The water is slowly getting cleaner this year unlike last year when the unnaturally warmer 
-		temps set in. With the cooler temps we are now getting it’s producing some epic sight casting 
-		conditions. Book a trips while the new prices last before the Spring rates kick in. You can pre 
-		pay now to lock in the Winter Rate for a Spring or even a Summer fishing trip.</p>
-	
-	<p>I hope your new year is going well... Let's Go Fishing!</p>
-	<center><img class="photo" src="../img/blog0-1.jpg">
-		<img class="photo" src="../img/blog0-2.jpg"></center>
+	<p>Summer is here as it seems. The sun is early to rise and the heat is turned up again. The coming of summer has its ups and downs... on one side you have Tarpon showing up and Snook making their way to the beaches and inlets. But you also have to wake up at 4 am and get on the water by first light. So for people like me, who love to sleep in... it's tough! Another plus side: amazing sunrises as you run across the water heading to the fishing grounds that evokes fond memories of special days on the water from the past. The smell of the morning air seems to stir the soul and pump up the blood. Then when you arrive to the first spot and no one is there but you. You see Redfish just 50 yards away tailing and fining on the surface... man what a feeling.
+    <br><br>
+    So now that I have your attention!
+    <br><br>
+    Let's get down to the latest fishing report.
+    <br><br>
+    Last week the water levels came up several inches and the bait moved in closer to the shore lines. As you can imagine so did the Redfish and Sea Trout. So basically you just need to move in closer than normal and patiently work the shorelines and shallow spots. On most days the Redfish are tailing but over the course of the day I'm finding more are just cruising along slowly.
+    <br><br>
+    Bait used:
+    <br><br>
+    The bait of choice right now for me has been soft plastics like 3 inch bait fish patterns in grey/white rigged on 1/8 oz jigs. Also 5 inch jerkbaits baits in white paired up on 4/0 wide gap work hooks.
+    <br><br>
+    Live shrimp work well for tailing reds and cut mullet on windy days casted out into sandy areas where fish tend to be.
+    <br><br>
+    May outlook:
+    <br><br>
+    The bigger redfish are slowly making an appearance. Yesterday we had several shots at fish in the upper 30 inch range and even seen fish over 40 inches. These fish were spread out but in the next few weeks they should start to school up.
+    <br><br>
+    Tarpon are on the way as they slowly migrate north to us from the Florida Keys. Once they get to Sebastian Inlet they move into the Indian River heading north toward Titusville. I'll be waiting there with rod in hand when they arrive!
+    </p>
 </div>
-
 <!-- Contact Form -->
-<div style="padding-top: 50px; width:100%;  background-color: #f7faff;">
+<div style="padding-top: 50px; background-color: #f7faff;">
 	<h4 style="text-align: center;">I'D LOVE TO HEAR FROM YOU</h4>
 	<h1 style="letter-spacing: 3px">CONTACT ME ANY TIME</h1>
 	<br>
