Fixed testimonials text and page

--- a/fishingreports/index.html
+++ b/fishingreports/index.html
@@ -37,7 +37,7 @@
 				<li class="header"><a class="header" href="index.html">Fishing Reports</a></li>
 				<li class="header"><a class="header" href="../rates/index.html">Rates/Location</a></li>
 				<li class="header"><a class="header" href="../photogallery/index.html">Photo Gallery</a></li>
-				<li class="header"><a class="header" href="../testamonials/index.html">Testamonials</a></li>
+				<li class="header"><a class="header" href="../testamonials/index.html">Testimonials</a></li>
 			</ul>
 		</nav>
 </div>
