--- a/testamonials/index.html
+++ b/testamonials/index.html
@@ -40,14 +40,14 @@
 				<li class="header"><a class="header" href="index.html">Fishing Reports</a></li>
 				<li class="header"><a class="header" href="../rates/index.html">Rates/Location</a></li>
 				<li class="header"><a class="header" href="../photogallery/index.html">Photo Gallery</a></li>
-				<li class="header"><a class="header" href="../testamonials/index.html">Testamonials</a></li>
+				<li class="header"><a class="header" href="../testamonials/index.html">Testimonials</a></li>
 			</ul>
 		</nav>
 </div>
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
-	<table style="margin-left: 100px; width:80%">
+	<table class="testamonials">
 		<tr>
 			<td><h3>Kevin Moore</h3></td>
 
