Added Contact form people

--- a/fishingreports/blog5.html
+++ b/fishingreports/blog5.html
@@ -88,6 +88,9 @@
 					<label for="name">NAME</label>
 					<input id="name" type="text" required name="name">
 
+					<label for="people">NUMBER OF PEOPLE</label>
+					<input id="people" type="text" required name="people">
+
 					<label for="email">YOUR EMAIL</label>
 					<input id="email" type="text" required name="email">
 
