--- a/index.html
+++ b/index.html
@@ -594,6 +594,9 @@
 					<label for="name">NAME</label>
 					<input id="name" type="text" required name="name">
 
+					<label for="people">NUMBER OF PEOPLE</label>
+					<input id="people" type="text" required name="people">
+
 					<label for="email">YOUR EMAIL</label>
 					<input id="email" type="text" required name="email">
 
@@ -605,7 +608,7 @@
 			
 					<br>
 					<label for="message">YOUR MESSAGE</label>
-					<textarea id="message" name="message" cols="25" rows="5"></textarea>
+					<textarea id="message" name="message" cols="25" rows="5" required></textarea>
 					<br>
 					<input type="submit" name="submit" value="Submit">
 					<br><br><br>
