--- a/rates/index.html
+++ b/rates/index.html
@@ -70,7 +70,7 @@
 	<p class="fishtype" style="padding: 30px">REDFISH - TARPON - SEA TROUT - SNOOK</p>
 	<h1 class="fish">MOSQUITO LAGOON</h1>
 	<p style="padding: 30px">Just 45 minutes <b>From Orlando Florida</b> and all the major theme parks</p>
-
+	<h1> Still need to make images pretty + add paypal stuff</h1>
 	<div style="display: inline;">
 		<figure>
 			<img src="../img/rates1.jpg" width="245px" height="163px">
@@ -210,6 +210,9 @@
 				<form action="mail.php" method="post">
 					<label for="name">NAME</label>
 					<input id="name" type="text" required name="name">
+
+					<label for="people">NUMBER OF PEOPLE</label>
+					<input id="people" type="text" required name="people">
 
 					<label for="email">YOUR EMAIL</label>
 					<input id="email" type="text" required name="email">
