--- a/index.html
+++ b/index.html
@@ -585,12 +585,14 @@
 	<br>
 	<h4 style="text-align: center;">Lets Go Fishing!</h4>
 	<br><br><br>
-	
 
 	<table>
 		<tr>
 			<td>
-				<form action="mail.php" method="post">
+				<form id="contactme" action="mail.php" method="post" target="sent">
+					
+					<input type="hidden" name="token" value="<?php echo $_SESSION['token'] ?>" />
+
 					<label for="name">NAME</label>
 					<input id="name" type="text" required name="name">
 
@@ -610,9 +612,22 @@
 					<label for="message">YOUR MESSAGE</label>
 					<textarea id="message" name="message" cols="25" rows="5" required></textarea>
 					<br>
-					<input type="submit" name="submit" value="Submit">
+					<input type="button" id="btnsubmit" value="Submit" onclick="submitForm()">
 					<br><br><br>
 				</form>
+
+				<script>
+					function submitForm() {
+						var frm = document.getElementById('contactme');
+						frm.submit(); // Submit
+						frm.reset();  // Reset
+						return true;
+					}
+				</script>
+
+				<iframe class="sent" name="sent" frameborder="0" border="0" cellspacing="0" style="border-style: none; width:100%; height:50px;"></iframe>
+
+				
 			</td>
 
 			<td id="contact_pc">
