--- a/testamonials/index.html
+++ b/testamonials/index.html
@@ -37,7 +37,7 @@
 				<li class="logo">
 					<img src="../img/logo.png"/></li>
 				<li class="header"><a class="header" href="../index.html">Home Page</a></li> 
-				<li class="header"><a class="header" href="index.html">Fishing Reports</a></li>
+				<li class="header"><a class="header" href="../fishingreports/index.html">Fishing Reports</a></li>
 				<li class="header"><a class="header" href="../rates/index.html">Rates/Location</a></li>
 				<li class="header"><a class="header" href="../photogallery/index.html">Photo Gallery</a></li>
 				<li class="header"><a class="header" href="../testamonials/index.html">Testimonials</a></li>
@@ -319,20 +319,25 @@
 </div>
 
 <!-- Contact Form -->
-<div style="padding-top: 50px; width:100%;  background-color: #f7faff;">
+<div style="padding-top: 50px; background-color: #f7faff;">
 	<h4 style="text-align: center;">I'D LOVE TO HEAR FROM YOU</h4>
 	<h1 style="letter-spacing: 3px">CONTACT ME ANY TIME</h1>
 	<br>
 	<h4 style="text-align: center;">Lets Go Fishing!</h4>
 	<br><br><br>
-	
 
-	<center><table>
+	<table>
 		<tr>
 			<td>
-				<form action="mail.php" method="post">
+				<form id="contactme" action="../mail.php" method="post" target="sent">
+					
+					<input type="hidden" name="token" value="<?php echo $_SESSION['token'] ?>" />
+
 					<label for="name">NAME</label>
 					<input id="name" type="text" required name="name">
+
+					<label for="people">NUMBER OF PEOPLE</label>
+					<input id="people" type="text" required name="people">
 
 					<label for="email">YOUR EMAIL</label>
 					<input id="email" type="text" required name="email">
@@ -345,11 +350,24 @@
 			
 					<br>
 					<label for="message">YOUR MESSAGE</label>
-					<textarea id="message" name="message" cols="25" rows="5"></textarea>
+					<textarea id="message" name="message" cols="25" rows="5" required></textarea>
 					<br>
-					<input type="submit" name="submit" value="Submit">
+					<input type="button" id="btnsubmit" value="Submit" onclick="submitForm()">
 					<br><br><br>
 				</form>
+
+				<script>
+					function submitForm() {
+						var frm = document.getElementById('contactme');
+						frm.submit(); // Submit
+						frm.reset();  // Reset
+						return true;
+					}
+				</script>
+
+				<iframe class="sent" name="sent" frameborder="0" border="0" cellspacing="0" style="border-style: none; width:100%; height:50px;"></iframe>
+
+				
 			</td>
 
 			<td id="contact_pc">
@@ -365,8 +383,9 @@
 			</td>
 		</tr>
 
-	</table></center>
+	</table>
 </div>
+
 
 <!-- Footer -->
 <footer>
