--- a/index.html
+++ b/index.html
@@ -290,13 +290,36 @@
 	<table style="width:80%;">	
 		<tr>
 				<div class="blog">
+					<td>
+						<a href="fishingreports/blog6.html"><img src="img/blog6.jpg" width="200px" height="150px;" style="padding: 20px" ></a>
+					</td>
+					
+					<td>
+						<h3>Orlando Fishing Reports</h3>
+						<a href="fishingreports/blog6.html"><h1 style="text-align: left;">Mosquito Lagoon</h1></a>
+						<p style="text-align: left;">Mosquito Lagoon February 12th - 2017 Report: The word for this past week will be wow. That simple little word is exactly what sums up the fishing report for the ...</p>
+						<br>
+					</td>
+				</div>
+		</tr>
+
+		<tr>
+			<div class="blog">
+				<td colspan="2">
+					<hr>
+				</td>
+			</div>
+		</tr>
+
+		<tr>
+				<div class="blog">
 					<hr>
 					<td>
 						<a href="fishingreports/blog0.html"><img src="img/blog0.jpg" width="200px" height="150px;" style="padding: 20px" ></a>
 					</td>
 					
 					<td>
-						<h3>ORLANDO FISHING CHARTERS</h3>
+						<h3>Orlando Fishing Reports</h3>
 						<a href="fishingreports/blog0.html"><h1 style="text-align: left;">Orlando Florida Fishing Charters</h1></a>
 						<p style="text-align: left;">January 29th 2017 – Orlando Florida Fishing Charters and fishing trips near the Mosquito Lagoon have been targeting huge black drum this past week. This time of the year</p>
 						<br>
@@ -319,7 +342,7 @@
 				</td>
 
 				<td>
-					<h3>ORLANDO FISHING CHARTERS</h3>
+					<h3>Orlando Fishing Reports</h3>
 					<a href="fishingreports/blog1.html"><h1 style="text-align: left;">Incredible Tailing Redfish Action!</h1></a>
 					<p style="text-align: left;">Incredible Tailing Redfish Action! Winter is that magical time of the year when Redfish really turn on and start offering pure sight casting opportunities. For the past 3 to...</p>
 					<br>
@@ -336,32 +359,6 @@
 			</div>
 		</tr>
 
-		<tr>
-			<div class="blog">
-				<td>
-					<a href="fishingreports/blog2.html"><img src="img/blog2.jpg" width="200px" height="150px;" style="padding: 20px" ></a>
-				</td>
-
-				<td>
-					<h3>ORLANDO FISHING CHARTERS</h3>
-					<a href="fishingreports/blog2.html"><h1 style="text-align: left;">Huge Mosquito Lagoon Red Fish</h1></a>
-					<p style="text-align: left;">Huge Mosquito Lagoon Red Fish
-						are here in Florida once again and that means it’s
-						time for the fall Mullet run. The Mullet run triggers
-						a feeding frenzy for big...</p>
-					<br>
-				</td>
-			</div>
-			
-		</tr>
-
-		<tr>
-			<div class="blog">
-				<td colspan="2">
-					<hr>
-				</td>
-			</div>
-		</tr>
 	</table>
 
 	<center><button class="moreReports"><a class="reports" href="fishingreports/index.html">MORE REPORTS</a></button></center>
@@ -370,11 +367,31 @@
 	<h1>LATEST FISHING REPORTS</h1>
 	<p>Weekly Updates</p>
 	<br>
+
+			<div class="blog">
+					<hr>
+					<img src="img/blog6.jpg" width="100%" height="auto;" style="padding-top: 20px; margin: auto;" >
+					<h3>Orlando Fishing Reports</h3>
+					<a href="fishingreports/blog6.html"><h1 style="text-align: left;">Mosquito Lagoon</h1></a>
+					<p style="text-align: left;">Mosquito Lagoon February 12th - 2017 Report: The word for this past week will be wow. That simple little word is exactly what sums up the fishing report for the ...</p>
+					<br>
+			</div>
+
+			<div class="blog">
+					<hr>
+						<img src="img/blog0.jpg" width="100%" height="auto;" style="padding-top: 20px; margin: auto;" >
+						<h3>Orlando Fishing Reports</h3>
+						<a href="fishingreports/blog0.html"><h1 style="text-align: left;">Orlando Fishing Charters</h1></a>
+						<p style="text-align: left;">  January 29th 2017 - Orlando Florida Fishing Charters and fishing trips near the Mosquito Lagoon have been targeting huge black drum this past week. This time of the year ...</p>
+						<br>
+				</div>
+
+
 			<div class="blog">
 					<hr>
 						<img src="img/blog1.jpg" width="100%" height="auto;" style="padding-top: 20px; margin: auto;" >
-						<h3>UNCATEGORIZED</h3>
-						<h1 style="text-align: left;">Incredible Tailing Redfish Action!</h1>
+						<h3>Orlando Fishing Reports</h3>
+						<a href="fishingreports/blog1.html"><h1 style="text-align: left;">Incredible Tailing Redfish Action!</h1></a>
 						<p style="text-align: left;">Incredible Tailing Redfish Action! Winter
 							is that magical time of the year when Redfish
 							really turn on and start offering pure sight
@@ -382,31 +399,6 @@
 						<br>
 				</div>
 
-
-			<div class="blog">
-					<hr>
-					<img src="img/blog2.jpg" width="100%" height="auto;" style="padding-top: 20px; margin: auto;" >
-					<h3>UNCATEGORIZED</h3>
-					<h1 style="text-align: left;">Huge Mosquito Lagoon Red Fish</h1>
-					<p style="text-align: left;"> Huge Mosquito Lagoon Red Fish
-						are here in Florida once again and that means it’s
-						time for the fall Mullet run. The Mullet run triggers
-						a feeding frenzy for big …</p>
-					<br>
-			</div>
-
-
-			<div class="blog">
-					<hr>
-					<img src="img/blog3.jpg" width="100%" height="auto;" style="padding-top: 20px; margin: auto;" >
-					<h3>UNCATEGORIZED</h3>
-					<h1 style="text-align: left;">Orlando Fishing Trip</h1>
-					<p style="text-align: left;">Orlando fishing trips and
-						guided fishing tours near orlando have been on a
-						rise over the past few years. Vacationing families
-						from around the globe have discovered phenomenal fishing just …</p>
-					<br>
-			</div>
 
 	<center><button class="moreReports"><a class="reports" href="fishingreports/index.html">MORE REPORTS</a></button></center>
 </div>
