Fixed positioning of blog headers

--- a/fishingreports/blog0.html
+++ b/fishingreports/blog0.html
@@ -47,8 +47,10 @@
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
+	<div style="width:90%; margin: 0 auto;">
 	<h1 style="text-align: left"> Orlando Florida Fishing Charters</h1>
 	<h3 style="text-align: left">POSTED ON JANUARY 29, 2017 BY FLATADDICTED</h3>
+	</div>
 	<hr><br>
 
 	<center><img class="photo" src="../img/blog0-0.jpg"></center>
