--- a/fishingreports/blog1.html
+++ b/fishingreports/blog1.html
@@ -47,8 +47,10 @@
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
+	<div style="width:90%; margin: 0 auto;">
 	<h1 style="text-align: left">Incredible Tailing Redfish Action!</h1>
 	<h3 style="text-align: left">POSTED ON December 2, 2016 BY FLATADDICTED</h3>
+	</div>
 	<hr><br>
 
 	<center><img class="photo" src="../img/blog1.jpg">
