--- a/fishingreports/blog3.html
+++ b/fishingreports/blog3.html
@@ -47,8 +47,10 @@
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
+	<div style="width:90%; margin: 0 auto;">
 	<h1 style="text-align: left">Orlando Fishing Trip</h1>
 	<h3 style="text-align: left">POSTED ON July 6, 2016 BY FLATADDICTED</h3>
+	</div>
 	<hr><br>
 
 	<p>Orlando fishing trips and guided fishing tours near orlando have been on a rise over the past few years. Vacationing families from around the globe have discovered phenomenal fishing just a short 45 minutes from the <u><a href="https://disneyworld.disney.go.com/resorts">Disney World Resorts</a></u>. When anglers are visiting Orlando and discover we have world class saltwater fishing this close to the theme parks they immediately call us to book a trip. The best inshore flats fishing occurs in the Mosquito Lagoon near the Kennedy Space center, Titusville FL.
