--- a/fishingreports/blog4.html
+++ b/fishingreports/blog4.html
@@ -47,8 +47,10 @@
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
+	<div style="width:90%; margin: 0 auto;">
 	<h1 style="text-align: left">Orlando Fishing Trips</h1>
 	<h3 style="text-align: left">POSTED ON MAy 18, 2016 BY FLATADDICTED</h3>
+	</div>
 	<hr><br>
 
 	<p>The past two weeks have been non-stop tailing redfish action in the mosquito Lagoon. There have been days when the sea trout bite has been pretty good but overall the redfish have been the most consistent.
