--- a/fishingreports/blog5.html
+++ b/fishingreports/blog5.html
@@ -47,8 +47,10 @@
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
+	<div style="width:90%; margin: 0 auto;">
 	<h1 style="text-align: left">Orlando Fishing Trips</h1>
 	<h3 style="text-align: left">POSTED ON MAy 18, 2016 BY FLATADDICTED</h3>
+	</div>
 	<hr><br>
 
 	<p>Summer is here as it seems. The sun is early to rise and the heat is turned up again. The coming of summer has its ups and downs... on one side you have Tarpon showing up and Snook making their way to the beaches and inlets. But you also have to wake up at 4 am and get on the water by first light. So for people like me, who love to sleep in... it's tough! Another plus side: amazing sunrises as you run across the water heading to the fishing grounds that evokes fond memories of special days on the water from the past. The smell of the morning air seems to stir the soul and pump up the blood. Then when you arrive to the first spot and no one is there but you. You see Redfish just 50 yards away tailing and fining on the surface... man what a feeling.
