--- a/fishingreports/blog6.html
+++ b/fishingreports/blog6.html
@@ -47,8 +47,10 @@
 
 <!-- Blog -->
 <div style="margin: 150px 20px;">
+	<div style="width:90%; margin: 0 auto;">
 	<h1 style="text-align: left">Mosquito Lagoon</h1>
 	<h3 style="text-align: left">POSTED ON FEBURARY 12, 2017 BY FLATADDICTED</h3>
+	</div>
 	<hr><br>
 
 	
