--- a/fishingreports/blog4.html
+++ b/fishingreports/blog4.html
@@ -163,7 +163,7 @@
 
 		<tr>
 			<td id="mobileblog">
-				<ul style="margin: 0 auto; width: 400px; padding: 20px;">
+				<ul class="contact">
 					<li class="footer"><h4>Monday through Sunday open 6am to 10pm</h4></li>
 					<li class="footer"><h4><img id="icon" src="../img/location2.png">1103 Garden ST. Titusville FL, 32796</h4></li>
 					<li class="footer"><h4><img id="icon" src="../img/phone2.png">1-407-432-5138</h4></li>
