--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       And that has made all the difference."</pre>
 </div>
 
-<div class="parallax" style="background-image: url(moon2.JPG);">
+<div class="parallax" style="background-image: url(moon4.JPG);">
     <div style="position: relative; left:50px; top:200px; width:40%;">
     <pre style="position: absolute; text-transform:uppercase; background-color:#282E34; width:fit-content; font-size: 18px; letter-spacing: 5px; padding: 20px;">
       "I am the Alpha and the Omega,
@@ -154,7 +154,7 @@
 <div style="background-color: #282E34; height: 100px;">
   </div>
 
-<div class="parallax" style="background-image: url(beach.JPG);">
+<div class="parallax" style="background-image: url(blur.JPG);">
 <script>
   var slideIndex = 0;
   var j = null;
