Fixed image file extensions

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 <body>
 <!-- Parallax -->
-  <div class="parallax" style="background-image: url(images/mosaic.JPG);">
+  <div class="parallax" style="background-image: url(images/mosaic.jpg);">
 
       <nav class="topnav" id="myTopnav">
           <a style="padding: 14px 16px;" href=""></a>
@@ -132,7 +132,7 @@
   </div>
 
 <!-- Parallax -->
-  <div class="parallax" style="background-image: url(images/moon4.JPG);">
+  <div class="parallax" style="background-image: url(images/moon4.jpg);">
     <div style="position: relative; left:50px; top:200px; width:40%;">
     <pre style="position: absolute; text-transform:uppercase; background-color:#282E34; width:fit-content; font-size: 18px; letter-spacing: 5px; padding: 20px;">
       "I am the Alpha and the Omega,
@@ -283,7 +283,7 @@
   </script>
 
 <!-- Parallax -->
-  <div class="parallax" style="background-image: url(images/blur.JPG);">
+  <div class="parallax" style="background-image: url(images/blur.jpg);">
 
 
 </body>
