--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   
   <style>
     html, body{width:100%; height: 100%; font-family: 'Lato', sans-serif; color: #ddd;}
+    #parallax1{background-image: url(images/mosaic.jpg);}
+    #parallax2{background-image: url(images/moon4.jpg);}
+    #parallax3{background-image: url(images/blur.jpg);}
     /* Navbar */
         .topnav {
           position: absolute;
@@ -36,6 +39,10 @@
         }
     @media screen and (max-width:770px){
       html, body{overflow-x: hidden}
+
+      #parallax1{background-image: url(images/mosaic_small.jpg);}
+      #parallax2{background-image: url(images/moon4_small.jpg);}
+      #parallax3{background-image: url(images/blur_small.jpg);}
 
       .topnav a:not(:last-child) {
         display: none;
@@ -69,8 +76,8 @@
       }
 
       #moon{
-        font-size: 15px;
-        top:400px;
+        font-size: 12px;
+        top:150px;
       }
 
     }
@@ -100,7 +107,7 @@
 
 <body>
 <!-- Parallax -->
-  <div class="parallax" style="background-image: url(images/mosaic.jpg);">
+  <div id="parallax2" class="parallax" style="background-image: url(images/mosaic.jpg);">
 
       <nav class="topnav" id="myTopnav">
           <a style="padding: 14px 16px;" href=""></a>
@@ -141,9 +148,9 @@
   </div>
 
 <!-- Parallax -->
-  <div class="parallax" style="background-image: url(images/moon4.jpg);">
+  <div id="parallax2" class="parallax" style="background-image: url(images/moon4.jpg);">
     <div style="position: relative; left:50px; top:200px; width:40%;">
-    <p style="position: absolute; text-transform:uppercase; background-color:#282E34; width:100%; font-size: 18px; letter-spacing: 5px; padding: 20px;">
+    <p id="moon" style="position: absolute; text-transform:uppercase; background-color:#282E34; width:100%; font-size: 18px; letter-spacing: 5px; padding: 20px;">
       "I am the Alpha and the Omega,
          the First and the Last,
            the Beginning and the End."</p>
@@ -292,7 +299,7 @@
   </script>
 
 <!-- Parallax -->
-  <div class="parallax" style="background-image: url(images/blur.jpg);">
+  <div id="parallax3" class="parallax" style="background-image: url(images/blur.jpg);">
 
 
 </body>
